Repair Redundant
Toolbar hidden behind Image Team and Work Title

--- a/css/msasb.css
+++ b/css/msasb.css
@@ -1153,7 +1153,7 @@ h1.Din-Grotesk{
       font-size: 34px;
       position:relative;
     /*  float :left;*/ 
-      z-index:1;
+      z-index:0;
   }
     #work-undeline{
     display: none;
